tests/compile-fail/swm/assign-function-to-multiple-pins.stderr
error[E0599]: no method named `assign` found for struct `lpc8xx_hal::swm::Function<lpc8xx_hal::swm::U0_RXD, lpc8xx_hal::swm::state::Assigned<lpc8xx_hal::pins::PIO0_0>>` in the current scope
  --> $DIR/assign-function-to-multiple-pins.rs:30:30
   |
30 |     let (u0_rxd, _) = u0_rxd.assign(pio0_1.into_swm_pin(), &mut swm_handle);
   |                              ^^^^^^ help: there is an associated function with a similar name: `unassign`
